--- a/mysite/blog/templates/blog/post_list.html
+++ b/mysite/blog/templates/blog/post_list.html
@@ -1,43 +1,13 @@
-<html>
-    <head>
-        <title>Django Girls blog</title>
-<!--    <style>
-    	div,p{
-    		width: 400px;
-    		height: auto;
-    		box-shadow: 0px 0px 8px #000;
-    		align-self: center;
-    		overflow: hidden;
-    		float: right;
-    		margin: 8px;
+{% extends 'blog/base.html' %}
+{% block content %}
 
-    		
-    	}
-    </style>
--->
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">Django Girls Blog</a></h1>
+{% for post in posts %}
+    <div class="post">
+        <div class="date">
+            {{ post.published_date }}
         </div>
-
-        <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">My first post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        </div>
-
-        <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">My second post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
-        </div>
-        {% for post in posts %}
-        	<div id="23">
-        		<p>published:{{ post.published_date}}</p>
-        		<h2><a href="https://safarbam.com">{{post.title}}</a></h2>
-        		<p>{{post.text|linebreaksbr}}</p>
-        	</div>
-        {%endfor%}
-    </body>
-</html>
+        <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+        <p>{{ post.text|linebreaksbr }}</p>
+    </div>
+{% endfor %}
+{% endblock %}
